Add another sentence to index p

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
   <body>
     <h1>Welcome to Penpen</h1>
     <p>
-      Create an account and start showcasing your articles and written publications.
+      Create an account and start showcasing your articles and written publications. Join our writing network and connect with experienced and amateur writers.
     </p>
   </body>
 </html>
